--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tdesign_icons_flutter
-description: A new Flutter package project.
+description: tdesign icons
 version: 1.0.0
-homepage:
+homepage: https://github.com/Kigoal/tdesign_icons_flutter
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
